--- a/test.css
+++ b/test.css
@@ -30,3 +30,47 @@
     outline: none;
     border: 0px;
 }
+
+.popup-add-task{
+    background-color: aqua;
+    height: 11rem;
+    width: 22rem;
+    border-radius: 1rem;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    padding-top: 30px;
+    text-align: center;
+    z-index: 1;
+    border: 3px solid blue;
+    display: none;
+}
+
+.blur-effect-task{
+    filter: blur(4px);
+    opacity: 0.8px;
+}
+
+.task-row{
+    display: flex;
+    justify-content: space-between;
+}
+
+.task-name{
+    padding-right: 10px;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.mark-done{
+    background-color: blue;
+    color: white;
+    font-size: 1rem;
+    border-radius: 20px;
+}
+.mark-done:hover{
+    background-color: cornflowerblue;
+}
