--- a/test.css
+++ b/test.css
@@ -74,3 +74,13 @@
 .mark-done:hover{
     background-color: cornflowerblue;
 }
+
+.mark-done-clicked{
+    display: none;
+}
+
+.strike-content{
+    text-decoration: line-through;
+    color: red;
+    justify-content: center;
+}
